; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_menu_setting_set_flags.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_menu_setting_set_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MENU_SETTING_STRING_OPTIONS = common dso_local global i32 0, align 4
@MENU_SETTING_ACTION = common dso_local global i32 0, align 4
@FILE_TYPE_PATH = common dso_local global i32 0, align 4
@MENU_SETTING_GROUP = common dso_local global i32 0, align 4
@MENU_SETTING_SUBGROUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @menu_setting_set_flags(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @setting_get_type(i32* %8)
  switch i32 %9, label %20 [
    i32 129, label %10
    i32 132, label %12
    i32 130, label %14
    i32 131, label %16
    i32 128, label %18
  ]

10:                                               ; preds = %7
  %11 = load i32, i32* @MENU_SETTING_STRING_OPTIONS, align 4
  store i32 %11, i32* %2, align 4
  br label %22

12:                                               ; preds = %7
  %13 = load i32, i32* @MENU_SETTING_ACTION, align 4
  store i32 %13, i32* %2, align 4
  br label %22

14:                                               ; preds = %7
  %15 = load i32, i32* @FILE_TYPE_PATH, align 4
  store i32 %15, i32* %2, align 4
  br label %22

16:                                               ; preds = %7
  %17 = load i32, i32* @MENU_SETTING_GROUP, align 4
  store i32 %17, i32* %2, align 4
  br label %22

18:                                               ; preds = %7
  %19 = load i32, i32* @MENU_SETTING_SUBGROUP, align 4
  store i32 %19, i32* %2, align 4
  br label %22

20:                                               ; preds = %7
  br label %21

21:                                               ; preds = %20
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %18, %16, %14, %12, %10, %6
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @setting_get_type(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
